# TimeToFrequencyConverter

./: README.md  clean.sh  out.root  output_intensity_data-design1.csv  parameters.toml  plot_spectrum.root  requirements.txt  setup.cfg
GetSimulatedDataTool/: __main__.py
GetSimulatedDataTool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
TimeToFrequencyConverter/: #TimeToFrequencyConverter.py#  .#TimeToFrequencyConverter.py  TimeToFrequencyApp.py  TimeToFrequencyApp.py~  TimeToFrequencyConverter.py  TimeToFrequencyConverter.py~  __main__.py  __main__.py~
TimeToFrequencyConverter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
TimeToFrequencyConverter/.ipynb_checkpoints/: TimeToFrequencyApp-checkpoint.py  TimeToFrequencyConverter-checkpoint.py  __main__-checkpoint.py
