[metadata]
name = GetSimulatedDataTool
version = attr: GetSimulatedDataTool.version.__version__
author = ruijiu
url = https://github.com/ruijiuchen/GetSimulatedDataTool
description = A program for copying data from server.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Science
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    GetSimulatedDataTool = GetSimulatedDataTool.__main__:main